# usb2dmx

./: CMakeLists.txt  Makefile  hid_console.py  hid_dimm.py  hid_test.py  install_win.txt  main.cpp  openocd.gdb  tusb_config.h  usb_descriptors.c
freecad/: case.FCStd  case.FCStd1
kicad/: usb2dmx.kicad_prl  usb2dmx.kicad_pro  usb2dmx.kicad_sch  usb2dmx.kicad_sch-bak
